--- a/_posts/2020-08-19-teaching.md
+++ b/_posts/2020-08-19-teaching.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Teaching Experiences
+title: Teaching Experience
 sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
