--- a/_posts/2020-08-15-fariha.md
+++ b/_posts/2020-08-15-fariha.md
@@ -8,7 +8,7 @@ excerpt_separator:  <!--more-->
 
 <!-- ### About me -->
 <br />
-Hi! This is Fariha. I am a Lecturer at Department of CSE in United International University. I am also a Master's Student in Department of CSE, BUET. I have been fortunate to be supervised by Professor [Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/) during my Undergrad and Masters.
+Hi! This is Fariha. I am a Lecturer at Department of CSE in United International University. I am also a Master's Student in Department of CSE, BUET. I have been fortunate to be supervised by Professor [Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters.
 
 <!-- ## Research
 
