updated msc status

--- a/_posts/2020-08-15-fariha.md
+++ b/_posts/2020-08-15-fariha.md
@@ -8,7 +8,7 @@ excerpt_separator:  <!--more-->
 
 <!-- ### About me -->
 <br />
-Hi! This is Fariha. I am a Lecturer at Department of CSE in United International University. I am also a Master's Student in Department of CSE, BUET. I have been fortunate to be supervised by Professor [Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters.
+Hi! This is Fariha. I am a Lecturer at Department of CSE in United International University. I have completed my Undergrad and Master's in the Department of CSE, BUET. I have been fortunate to be supervised by Professor [Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters.
 
 <!-- ## Research
 
@@ -33,7 +33,7 @@ Department of Computer Science and Engineering, United International University 
 <!-- <br/>
 ## Education
 
-#### Master of Science | December 2018 - present
+#### Master of Science | December 2018 - June 2021
 Computer Science and Engineering, Bangladesh University of Engineering and Technology
 
 #### Bachelor of Science | July 2014 - October 2018
