--- a/_posts/2020-08-19-teaching.md
+++ b/_posts/2020-08-19-teaching.md
@@ -5,7 +5,15 @@ sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
 
-#### Summer 2021 | July 2021 - Present
+#### Fall 2021 | November 2021 - Present
+<font size="3"> 
+CSI 227	Algorithms <br/>
+CSI 228	Algorithms Lab <br/>
+CSI 341	Artificial Intelligence <br/>
+CSI 416	Pattern Recognition Lab
+</font>
+
+#### Summer 2021 | July 2021 - October 2021
 <font size="3"> 
 SOC 101 Society, Technology and Engineering Ethics <br/>
 CSI 227	Algorithms <br/>
