updated research and teaching

--- a/_posts/2020-08-19-teaching.md
+++ b/_posts/2020-08-19-teaching.md
@@ -5,7 +5,16 @@ sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
 
-#### Fall 2021 | November 2021 - Present
+#### Spring 2022 | March 2022 - Present
+<font size="3"> 
+CSE 2217 Algorithms <br/>
+CSE 2218 Algorithms Lab <br/>
+CSE 3811 Artificial Intelligence <br/>
+CSE 3812 Artificial Intelligence Lab <br/>
+CSE 1110 Introduction to Computer Systems 
+</font>
+
+#### Fall 2021 | November 2021 - February 2022
 <font size="3"> 
 CSI 227	Algorithms <br/>
 CSI 228	Algorithms Lab <br/>
