--- a/_posts/2022-10-12-cv.md
+++ b/_posts/2022-10-12-cv.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: CV
+title: [CV](data/FarihaCV.pdf){:target="_blank"}
 sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
 
-# [CV](data/FarihaCV.pdf){:target="_blank"}
+<!-- # [CV](data/FarihaCV.pdf){:target="_blank"} -->
