added scholar to sidebar

--- a/_posts/2020-08-16-research.md
+++ b/_posts/2020-08-16-research.md
@@ -6,7 +6,7 @@ excerpt_separator:  <!--more-->
 ---
 
 <!-- ## Research -->
-[Google Scholar](https://scholar.google.com/citations?user=3jceKgQAAAAJ)
+<!-- [Google Scholar](https://scholar.google.com/citations?user=3jceKgQAAAAJ) -->
 
 #### A Privacy-Enhanced and Personalized Safe Route Planner with Crowdsourced Data and Computation
 <font size="4"> Fariha Tabassum Islam, Tanzima Hashem, Rifat Shahriyar </font>  
