--- a/_posts/2020-08-16-research.md
+++ b/_posts/2020-08-16-research.md
@@ -12,10 +12,8 @@ excerpt_separator:  <!--more-->
 <font size="4"> Fariha Tabassum Islam, Tanzima Hashem, Rifat Shahriyar </font>  
 **ICDE 2021** | Core Rank: A* | [Link](https://ieeexplore.ieee.org/abstract/document/9458643/){:target="_blank"}
 
-
-
-<font size="4">
-<p style="line-height:1.0">
+<font size="3rem">
+<p style="line-height:1.3;color:blue">
 We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers' safety on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. We further enhance user privacy by minimizing the exposure of personalized safety scores with others.
 </p>
 </font>
