--- a/_posts/2020-08-19-research.md
+++ b/_posts/2020-08-19-research.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Research
+title: Research Projects
 sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
@@ -8,15 +8,28 @@ excerpt_separator:  <!--more-->
 <!-- ## Research -->
 <!-- [Google Scholar](https://scholar.google.com/citations?user=3jceKgQAAAAJ) -->
 
+### A Privacy-Enhanced and Personalized Safe Route Planner
+![System architecture of our safe route planner](/images/saferouteplanner.png "System architecture")
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers' safety on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. Our algorithms for finding the safest route further enhance user privacy by minimizing the exposure of personalized safety scores with others. Our safe route planner can find the safest routes for individuals and groups by considering both a fixed and a set of flexible destination locations.
+</p>
+</font>
+
+### Crowdsourced Package Delivery using Public Transport Networks
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+The popularity of e-commerce has caused the rise of crowdsourced package delivery. In this research, we introduce an efficient approach to find the package delivery route based on the available journey plans of passengers in public transport networks. Our approach allows package transfers between the public transport passengers and thereby increase the success rate of the crowdsourced package delivery.
+</p>
+</font>
+
+
+## Publications
 #### A Privacy-Enhanced and Personalized Safe Route Planner with Crowdsourced Data and Computation
 <font size="4"> Fariha Tabassum Islam, Tanzima Hashem, Rifat Shahriyar </font>  
 **ICDE 2021** | Core Rank: A* | [Link](https://ieeexplore.ieee.org/abstract/document/9458643/){:target="_blank"}
 
-<font size="3rem">
-<p style="line-height:1.3;color:blue">
-We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers' safety on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. We further enhance user privacy by minimizing the exposure of personalized safety scores with others.
-</p>
-</font>
+
 
 
 <!-- <font size="2"> We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers’ safety on roads. Though few research attempts have been made in this regard, all of them assume that people share their sensitive travel experiences with a centralized entity for finding the safest routes, which is not ideal in practice for privacy reasons. Furthermore, existing works formulate the safe route planning query in ways that do not meet a traveler’s need for safe travel on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. We develop a privacy-preserving model to quantify the travel experience of a user into personalized safety scores. Our algorithms for finding the safest route further enhance user privacy by minimizing the exposure of personalized safety scores with others. We implement a working prototype of our solution on the Android platform. Extensive experiments using real datasets show that our approach finds the safest route in seconds with 50% less exposure of personalized safety scores. </font>    -->
