--- a/_posts/2020-08-15-fariha.md
+++ b/_posts/2020-08-15-fariha.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Fariha Tabassum Islam
-subtitle: Researcher | Lecturer
+subtitle: Researcher | Learner | Teacher
 excerpt_separator:  <!--more-->
 # sidebar_link: true
 ---
