--- a/_posts/2020-08-22-research.md
+++ b/_posts/2020-08-22-research.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Research Projects
+title: Notable Research Projects
 sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
@@ -8,22 +8,23 @@ excerpt_separator:  <!--more-->
 <!-- ## Research -->
 <!-- [Google Scholar](https://scholar.google.com/citations?user=3jceKgQAAAAJ) -->
 
-#### A Privacy-Enhanced and Personalized Safe Route Planner
+<!-- #### A Privacy-Enhanced and Personalized Safe Route Planner
 ![System architecture of our safe route planner](/images/saferouteplanner.png "System architecture")
 <font size="3rem">
 <p style="line-height:1.3;color:gray">
 We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers' safety on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. Our algorithms for finding the safest route further enhance user privacy by minimizing the exposure of personalized safety scores with others. Our safe route planner can find the safest routes for individuals and groups by considering both a fixed and a set of flexible destination locations.
 </p>
-</font>
+</font> -->
 
 #### Crowdsourced Package Delivery using Public Transport Networks
+##### Undergrad Thesis
 <font size="3rem">
 <p style="line-height:1.3;color:gray">
 The popularity of e-commerce has caused the rise of crowdsourced package delivery. In this research, we introduce an efficient approach to find the package delivery route based on the available journey plans of passengers in public transport networks. Our approach allows package transfers between the public transport passengers and thereby increase the success rate of the crowdsourced package delivery.
 </p>
 </font>
 
-
+Coming soon...
 <!-- ## Publications
 #### A Privacy-Enhanced and Personalized Safe Route Planner with Crowdsourced Data and Computation
 <font size="4"> Fariha Tabassum Islam, Tanzima Hashem, Rifat Shahriyar </font>  
