--- a/_posts/2020-08-21-awards.md
+++ b/_posts/2020-08-21-awards.md
@@ -6,17 +6,20 @@ excerpt_separator:  <!--more-->
 ---
 
 
-### Reviewer
+#### Reviewer
+* WISE (2020, 2021)
+* NSysS (2020, 2021)
+* APWeb-WAIM (2019)
 
-<font size="4"> WISE 2021 <br/> </font>
+<!-- <font size="4"> WISE 2021 <br/> </font>
 <font size="4"> NSysS 2020 <br/> </font>
-<font size="4"> APWeb-WAIM 2019 <br/> </font> 
+<font size="4"> APWeb-WAIM 2019 <br/> </font>  -->
 
 <!-- * ICDE  -->
 <!-- 2022 -->
 
-### Awards
+#### Awards
 
-* <font size="4"> First runner-up group | Hackathon for Women 2017 (36 hours) by ICT Division, Govt. of Bangladesh </font>
-* <font size="4"> First runner-up group | Women's Day Innovation Challenge 2017, Facebook Developer Circle, Dhaka </font>
-* <font size="4"> Dean's Honor List | BUET - 2016-17, 2015-16, 2014-15, 2013-14 </font>
+- *First runner-up group* | Hackathon for Women 2017 (36 hours) by ICT Division, Govt. of Bangladesh 
+- *First runner-up group* | Women's Day Innovation Challenge 2017, Facebook Developer Circle, Dhaka 
+- *Dean's Honor List* | BUET - 2016-17, 2015-16, 2014-15, 2013-14 
