--- a/_posts/2020-08-21-awards.md
+++ b/_posts/2020-08-21-awards.md
@@ -20,6 +20,6 @@ excerpt_separator:  <!--more-->
 
 #### Awards
 
-- *First runner-up group* | Hackathon for Women 2017 (36 hours) by ICT Division, Govt. of Bangladesh 
-- *First runner-up group* | Women's Day Innovation Challenge 2017, Facebook Developer Circle, Dhaka 
-- *Dean's Honor List* | BUET - 2016-17, 2015-16, 2014-15, 2013-14 
+* *First runner-up group*, Hackathon for Women 2017 (36 hours) by ICT Division, Govt. of Bangladesh 
+* *First runner-up group*, Women's Day Innovation Challenge 2017, Facebook Developer Circle, Dhaka 
+* *Dean's Honor List*, BUET - 2016-17, 2015-16, 2014-15, 2013-14 
