--- a/_posts/2020-08-23-teaching.md
+++ b/_posts/2020-08-23-teaching.md
@@ -4,8 +4,25 @@ title: Teaching Experience
 sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
+#### Fall 2022 | October 2022 - Present
+<font size="3"> 
+CSE 2217 Algorithms <br/>
+CSE 2218 Algorithms Lab <br/>
+CSE 3812 Artificial Intelligence Lab <br/>
+URC 1103 Life Skills for Success <br/>
+</font>
+<br/>
 
-#### Spring 2022 | March 2022 - Present
+#### Summer 2022 | June 2022 - October 2022
+<font size="3"> 
+CSE 2217 Algorithms <br/>
+CSE 2218 Algorithms Lab <br/>
+CSE 3811 Artificial Intelligence <br/>
+CSE 3812 Artificial Intelligence Lab <br/>
+</font>
+<br/>
+
+#### Spring 2022 | March 2022 - June 2022
 <font size="3"> 
 CSE 2217 Algorithms <br/>
 CSE 2218 Algorithms Lab <br/>
@@ -13,6 +30,7 @@ CSE 3811 Artificial Intelligence <br/>
 CSE 3812 Artificial Intelligence Lab <br/>
 CSE 1110 Introduction to Computer Systems 
 </font>
+<br/>
 
 #### Fall 2021 | November 2021 - February 2022
 <font size="3"> 
@@ -21,6 +39,7 @@ CSI 228	Algorithms Lab <br/>
 CSI 341	Artificial Intelligence <br/>
 CSI 416	Pattern Recognition Lab
 </font>
+<br/>
 
 #### Summer 2021 | July 2021 - October 2021
 <font size="3"> 
@@ -30,6 +49,7 @@ CSI 228	Algorithms Lab <br/>
 CSI 322	Software Engineering Lab <br/>
 CSI 341	Artificial Intelligence
 </font>
+<br/>
 
 #### Spring 2021 | February 2021 -  June 2021
 <font size="3"> 
@@ -37,6 +57,7 @@ CSI 227	Algorithms <br/>
 CSI 228	Algorithms Lab <br/>
 CSI 322	Software Engineering Lab
 </font>
+<br/>
 
 #### Fall 2020 | October 2020 - February 2021
 <font size="3"> 
@@ -45,12 +66,14 @@ CSI 211	Object Oriented Programming <br/>
 CSI 227	Algorithms <br/>
 CSI 312	System Analysis and Design Lab
 </font>
+<br/>
 
 #### Summer 2020 | August 2020 - October 2020
 <font size="3"> 
 CSI 217	Data Structure <br/>
 CSI 416	Pattern Recognition Lab
 </font>
+<br/>
 
 #### Spring 2019 | January 2019 - May 2019
 <font size="3"> 
