updated research projects

--- a/_posts/2020-08-22-research.md
+++ b/_posts/2020-08-22-research.md
@@ -5,6 +5,15 @@ sidebar_link: true
 excerpt_separator:  <!--more-->
 ---
 
+#### Safe Route Planner
+##### Master’s thesis, published in ICDE2021, extension accepted in TKDE
+![System architecture of safe route planner](/images/saferouteplanner.png "System architecture")
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+We introduce a novel safe route planning problem and develop an efficient solution to ensure the travelers' safety on roads. Our approach finds the safest routes within a user-specified distance threshold based on the personalized travel experience of the knowledgeable crowd without involving any centralized computation. Our algorithms for finding the safest route further enhance user privacy by minimizing the exposure of personalized safety scores with others. Our safe route planner can find the safest routes for individuals and groups by considering both a fixed and a set of flexible destination locations.
+</p>
+</font>
+
 #### Crowdsourced Package Delivery using Public Transport Networks
 ##### Undergrad Thesis
 <font size="3rem">
@@ -13,9 +22,46 @@ The popularity of e-commerce has caused the rise of crowdsourced package deliver
 </p>
 </font>
 
-Coming soon...
+#### Multi-trajectory User Linking
+##### Data Mining master’s course project, published in NSysS 2022
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+This work identifies a user from his/her multiple available trajectories using GRU autoencoder.
+</p>
+</font>
 
+#### Representative Dissimilar Path Finding
+##### Accepted in JOSIS 2022
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+This work introduces a representative dissimilar path (RDP) query and provides an efficient algorithm for finding a set of most dissimilar routes from sets of representative routes for different features.
+</p>
+</font>
 
+#### Mobile image analysis in healthcare 
+##### A survey manuscript under preparation
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+In this project, we utilize smartphone cameras and sensors to screen various diseases for preliminary healthcare, especially considering
+underserved people. 
+</p>
+</font>
+
+#### Reference Guided Genome Annotation
+##### Computational Biology master’s course project
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+In this project, we annotates a target genome using a closely related, well-annotated reference genome using ensemble of RATT, Glimmer and BLAST.
+</p>
+</font>
+
+#### Credit Card Fraud Detection 
+##### Network Security master’s course project
+<font size="3rem">
+<p style="line-height:1.3;color:gray">
+In this project, we detects credit card frauds using Siamese network.
+</p>
+</font>
 
 
 <!-- ## Publications
