--- a/_posts/2020-08-15-fariha.md
+++ b/_posts/2020-08-15-fariha.md
@@ -6,7 +6,7 @@ excerpt_separator:  <!--more-->
 # sidebar_link: true
 ---
 
-Hi! This is Fariha. I am working as a Lecturer at the Department of CSE in United International University. I have completed my Undergrad and Master's in the Department of CSE, BUET. I have been fortunate to be supervised by [Professor Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters.
+Hi! This is Fariha. I am working as a Lecturer at the Department of CSE in United International University. I have completed my Undergrad and Master's in the Department of CSE, BUET. I have been fortunate to be supervised by [Professor Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters. I am an incoming Ph.D. student at the University of Wisconsin-Madison.
 
 <!-- ## Research
 
