--- a/_posts/2020-08-21-awards.md
+++ b/_posts/2020-08-21-awards.md
@@ -10,6 +10,7 @@ excerpt_separator:  <!--more-->
 * WISE (2020, 2021)
 * NSysS (2020, 2021)
 * APWeb-WAIM (2019, 2023)
+* DSAA (2023)
 
 <!-- <font size="4"> WISE 2021 <br/> </font>
 <font size="4"> NSysS 2020 <br/> </font>
