updated bio and experience

--- a/_posts/2020-08-15-fariha.md
+++ b/_posts/2020-08-15-fariha.md
@@ -8,7 +8,7 @@ excerpt_separator:  <!--more-->
 
 Hi! This is Fariha. I am a first year Ph.D. student at the University of Wisconsin-Madison in the department of Computer Sciences. 
 
-Previously, I worked as an Asst. Prof. at the Department of CSE in United International University. I have completed my Undergrad and Master's in the Department of CSE, BUET. I have been fortunate to be supervised by [Professor Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters. 
+Previously, I worked as a faculty at the Department of CSE in United International University. I have completed my Undergrad and Master's in the Department of CSE, BUET. I have been fortunate to be supervised by [Professor Dr. Tanzima Hashem](https://sites.google.com/site/tanzimahashem/){:target="_blank"} during my Undergrad and Masters. 
 
 <!-- ## Research
 
